# factor

./: README.md  glossary.md  proof1.txt  proof10.txt  proof11.txt  proof12.txt  proof13.txt  proof14.txt  proof15.txt  proof16.txt  proof17.txt  proof2.txt  proof3.txt  proof4.txt  proof5.txt  proof6.txt  proof7.txt  proof8.txt  proof9.txt  pyproject.toml  theorem1.txt  theorem10.txt  theorem11.txt  theorem12.txt  theorem13.txt  theorem14.txt  theorem15.txt  theorem16.txt  theorem17.txt  theorem2.txt  theorem3.txt  theorem4.txt  theorem5.txt  theorem6.txt  theorem7.txt  theorem8.txt  theorem9.txt
docs/: dependency-graph.md
proofs/: T01-linearized-state-transition-proof.md  T02-trivial-path-existence-proof.md  T03-nontrivial-path-existence-proof.md  T04-monotonic-growth-proof.md  T05-modular-state-transition-proof.md  T06-modular-orbit-graph-proof.md  T07-prime-axis-alignment-proof.md  T08-prime-orbit-cardinality-proof.md  T09-squarefree-orbit-decomposition-proof.md  T10-generalized-orbit-decomposition-proof.md  T11-sibling-divergence-proof.md  T12-path-bc-congruence-proof.md  T13-path-ab-congruence-proof.md  T14-multiswap-congruence-proof.md  T15-differential-suffix-propagation-proof.md  T16-geometric-parent-determinism-proof.md  T17-multiswap-differential-proof.md
tests/: README.md  checker.py  conftest.py  core.py  test_t01_linearized_state_transition.py  test_t02_trivial_path_existence.py  test_t03_nontrivial_path_existence.py  test_t04_monotonic_growth.py  test_t05_modular_state_transition.py  test_t06_modular_orbit_graph.py  test_t07_prime_axis_alignment.py  (+10 more)
(+24 files in other folders)
