[project]
name = "factor"
version = "0.1.0"
description = "Factorization via Berggren PPT-tree navigation."
readme = "README.md"
requires-python = ">=3.8"
# Runtime is standard-library only; pytest is needed only to run the suite.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
